新規登録画面に最寄駅が登録できるよう実装

--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: property, local: true) do |form| %>
+<%= form_with(model: @property, local: true) do |form| %>
   <% if property.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(property.errors.count, "error") %> prohibited this property from being saved:</h2>
@@ -12,31 +12,67 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
+    <%= form.label :物件名 %>
     <%= form.text_field :name %>
   </div>
 
   <div class="field">
-    <%= form.label :rent %>
-    <%= form.text_field :rent %>
+    <%= form.label :賃料 %>
+    <%= form.text_field :rent %>円
   </div>
 
   <div class="field">
-    <%= form.label :address %>
+    <%= form.label :住所 %>
     <%= form.text_field :address %>
   </div>
 
   <div class="field">
-    <%= form.label :age %>
-    <%= form.text_field :age %>
+    <%= form.label :築年数 %>
+    <%= form.text_field :age %>年
   </div>
 
   <div class="field">
-    <%= form.label :remarks %>
+    <%= form.label :備考 %>
     <%= form.text_area :remarks %>
   </div>
 
+  <hr>
+  <%=form.fields_for :nearest_stations do |nearest_station| %>
+    <h4>最寄り駅1</h4>
+    <div class="field">
+    <%= nearest_station.label :路線名%>
+    <%= nearest_station.text_field :line_name %>
+    </div>
+
+    <div class="field">
+    <%= nearest_station.label :駅名%>
+    <%= nearest_station.text_field :station_name %>
+    </div>
+
+    <div class="field">
+    <%= nearest_station.label :徒歩分数%>
+    <%= nearest_station.text_field :walk_time %>分
+    </div>
+    
+    <h4>最寄り駅2</h4>
+    <div class="field">
+    <%= nearest_station.label :路線名%>
+    <%= nearest_station.text_field :line_name %>
+    </div>
+
+    <div class="field">
+    <%= nearest_station.label :駅名%>
+    <%= nearest_station.text_field :station_name %>
+    </div>
+
+    <div class="field">
+    <%= nearest_station.label :徒歩分数%>
+    <%= nearest_station.text_field :walk_time %>分
+    </div>
+
+  <% end %>
+
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit"登録する" %>
   </div>
 <% end %>
