--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -22,9 +22,9 @@
         <td><%= property.address %></td>
         <td><%= property.age %></td>
         <td><%= property.remarks %></td>
-        <td><%= link_to 'Show', property %></td>
-        <td><%= link_to 'Edit', edit_property_path(property) %></td>
-        <td><%= link_to 'Destroy', property, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '詳細', property %></td>
+        <td><%= link_to '編集', edit_property_path(property) %></td>
+        <td><%= link_to '削除', property, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
