--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -25,5 +25,5 @@
   <%= @property.remarks %>
 </p>
 
-<%= link_to 'Edit', edit_property_path(@property) %> |
-<%= link_to 'Back', properties_path %>
+<%= link_to '編集', edit_property_path(@property) %> |
+<%= link_to '戻る', properties_path %>
