--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @property, local: true) do |form| %>
+<%= form_with(model: property, local: true) do |form| %>
   <% if property.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(property.errors.count, "error") %> prohibited this property from being saved:</h2>
@@ -37,24 +37,10 @@
   </div>
 
   <hr>
+  <% x = 1 %>
   <%=form.fields_for :nearest_stations do |nearest_station| %>
-    <h4>最寄り駅1</h4>
-    <div class="field">
-    <%= nearest_station.label :路線名%>
-    <%= nearest_station.text_field :line_name %>
-    </div>
-
-    <div class="field">
-    <%= nearest_station.label :駅名%>
-    <%= nearest_station.text_field :station_name %>
-    </div>
-
-    <div class="field">
-    <%= nearest_station.label :徒歩分数%>
-    <%= nearest_station.text_field :walk_time %>分
-    </div>
+    <h2>最寄駅<%= x %></h2>
     
-    <h4>最寄り駅2</h4>
     <div class="field">
     <%= nearest_station.label :路線名%>
     <%= nearest_station.text_field :line_name %>
@@ -69,7 +55,7 @@
     <%= nearest_station.label :徒歩分数%>
     <%= nearest_station.text_field :walk_time %>分
     </div>
-
+    <% x += 1 %>
   <% end %>
 
   <div class="actions">
