--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -1,29 +1,54 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>物件名:</strong>
   <%= @property.name %>
 </p>
 
 <p>
-  <strong>Rent:</strong>
+  <strong>賃料:</strong>
   <%= @property.rent %>
 </p>
 
 <p>
-  <strong>Address:</strong>
+  <strong>住所:</strong>
   <%= @property.address %>
 </p>
 
 <p>
-  <strong>Age:</strong>
+  <strong>築年数:</strong>
   <%= @property.age %>
 </p>
 
 <p>
-  <strong>Remarks:</strong>
+  <strong>備考:</strong>
   <%= @property.remarks %>
 </p>
+
+<hr>
+<% n = 0 %>
+<% @nearest_stations.each do |nearest_station| %>
+  <% if @property.nearest_stations.any? %>
+  <%# @properties.each do |nearest_station| %>
+    <h2>最寄駅<%= n += 1 %></h2>
+
+    <p>
+      <strong>路線名:</strong>
+      <%= nearest_station.line_name %>
+    </p>
+
+    <p>
+      <strong>駅名:</strong>
+      <%= nearest_station.station_name %>
+    </p>
+
+    <p>
+      <strong>徒歩分数:</strong>
+      <%= nearest_station.walk_time %>
+    </p>
+
+  <% end %>
+<% end %>
 
 <%= link_to '編集', edit_property_path(@property) %> |
 <%= link_to '戻る', properties_path %>
